# ece129_discharger

./: .gitignore
firmware/: Cargo.toml  README.md  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/.zed/: settings.json
firmware/src/: board.rs  main.rs
hardware/: ece129_discharger.kicad_pro  ece129_discharger.kicad_sch  fp-lib-table  mcu.kicad_sch  sym-lib-table  temp_sense.kicad_sch  voltage_current_sense.kicad_sch
hardware/gate_driver_daughter_board/: gate_driver_daughter_board.kicad_pro  gate_driver_daughter_board.kicad_sch  sym-lib-table
hardware/gate_driver_daughter_board/libraries/: REC20K-2412SZ.kicad_mod  REC20K-2412SZ.kicad_sym  gate_driver_daughter_board.kicad_sym
hardware/libraries/: discharger.kicad_sym
hardware/libraries/discharger.pretty/: NUCLEO-H503RB.kicad_mod
